--- a/index.html
+++ b/index.html
@@ -3,17 +3,16 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add a relevant page title</title>
+    <title>Lesson 02 Page</title>
   </head>
   <body>
     <main>
       <!-- ***********************  ABOUT / PROFILE  *********************** -->
       <header>
-        <h1>Your Name</h1>
-        <h2>Job title or tagline</h2>
+        <h1>Daniel Ocampo</h1>
+        <h2>Web Developer</h2>
 
-        <p>Add your profile copy here. Add more paragraphs or links as needed. Here is some dummy text: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent bibendum, diam ut gravida efficitur, risus neque scelerisque erat, ut rhoncus erat odio ac justo. Nunc scelerisque vestibulum augue, sit amet hendrerit ante.</p>
-        <p>Add another paragraph if needed.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent bibendum, diam ut gravida efficitur, risus neque scelerisque erat, ut rhoncus erat odio ac justo. Nunc scelerisque vestibulum augue, sit amet hendrerit ante.</p>
       </header>
 
       <!-- ********************  PROJECTS / PORTFOLIO  ********************* -->
@@ -34,7 +33,6 @@
       <!-- ***********************  WORK EXPERIENCE  *********************** -->
       <section>
         <h2>Work Experience</h2>
-        <p>Optional paragraph for work experience summary. Not a part of the job details. Delete if not being used.</p>
 
         <!-- Copy this whole <section> block to add more jobs. -->
         <section>
@@ -59,9 +57,9 @@
 
         <!-- Copy this whole <section> block to add more schools. -->
         <section>
-          <h3>School name - City</h3>
-          <p>Designation received or program name, year attended</p>
-          <p>Summary or accomplishments.</p>
+          <h3>Wake Technical Community College - Raleigh</h3>
+          <p>Web Development 2020 - 2023</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quae duo sunt, unum facit. Quid dubitas igitur mutare principia naturae? In schola desinis. Frater et T.</p>
         </section>
         <!-- End of School block. -->
       </section>
@@ -72,8 +70,8 @@
 
         <!-- Social media and contact links. Add or remove any networks. -->
         <ul>
-          <li><a href="mailto:email@example.com">email@example.com</a></li>
-          <li><a href="http://yourwebsite.com" target="_blank">yourwebsite.com</a></li>
+          <li><a href="mailto:daocampo@my.waketech.edu">daocampo@my.waketech.edu</a></li>
+          <li><a href="http://yourwebsite.com" target="_blank">daocampo.com</a></li>
           <li><a href="#" target="_blank">Twitter</a></li>
           <li><a href="#" target="_blank">LinkedIn</a></li>
           <li><a href="#" target="_blank">Facebook</a></li>
