--- a/index.html
+++ b/index.html
@@ -36,17 +36,10 @@
 
         <!-- Copy this whole <section> block to add more jobs. -->
         <section>
-          <h3>Job title</h3>
-          <p>Company Name</p>
-          <p>Date at job</p>
-          <p>Job summary goes here. Add as many paragraphs as you need.</p>
-          <p>Optional list:</p>
-          <ul>
-            <li>Delete this list if you don't need it.</li>
-            <li>Created...</li>
-            <li>Lead...</li>
-            <li>Responsible for...</li>
-          </ul>
+          <h3>Sales Associate</h3>
+          <p>Dollar Tree</p>
+          <p>2022 - Present</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quae duo sunt, unum facit. Quid dubitas igitur mutare principia naturae? In schola desinis. Frater et T.</p>
         </section>
         <!-- End of Job block. -->
       </section>
