--- a/index.html
+++ b/index.html
@@ -43,6 +43,19 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quae duo sunt, unum facit. Quid dubitas igitur mutare principia naturae? In schola desinis. Frater et T.</p>
         </section>
         <!-- End of Job block. -->
+        <section>
+          <h3>Sales Associate</h3>
+          <p>Walmart</p>
+          <p>2021 - 2022</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quae duo sunt, unum facit. Quid dubitas igitur mutare principia naturae? In schola desinis. Frater et T.</p>
+        </section>
+
+        <section>
+          <h3>Sales Associate</h3>
+          <p>Food Lion</p>
+          <p>2019 - 2020</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quae duo sunt, unum facit. Quid dubitas igitur mutare principia naturae? In schola desinis. Frater et T.</p>
+        </section>
       </section>
 
       <!-- ******************  EDUCATION & CERTIFICATIONS ****************** -->
