--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 
         <!-- Copy the whole <section> block to add more projects. -->
         <section>
-          <h3>Project Name</h3>
-          <img src="placeholder images/thumbnail-2.jpg" alt="Coffee Cup next to Laptop">
-          <p>Summary or description of the project and/or your role in it. Add as many paragraphs as you need.</p>
-          <a href="#" target="_blank">View project / case study</a>
+          <h3>Music Artist Landing Page</h3>
+          <img src="placeholder images/Capture.JPG" alt="Screenshot of danielsgone.com Home page">
+          <p>Took on full creative control on this websites design and functionality.</p>
+          <a href="https://danielsgone.com" target="_blank">View project / case study</a>
         </section>
         <!-- End of Project block. -->
       </section>
