--- a/index.html
+++ b/index.html
@@ -4,85 +4,97 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lesson 02 Page</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <main>
       <!-- ***********************  ABOUT / PROFILE  *********************** -->
       <header>
-        <h1>Daniel Ocampo</h1>
-        <h2>Web Developer</h2>
+        <div class="wrapper">
+          <h1>Daniel Ocampo</h1>
+          <h2>Web Developer</h2>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent bibendum, diam ut gravida efficitur, risus neque scelerisque erat, ut rhoncus erat odio ac justo. Nunc scelerisque vestibulum augue, sit amet hendrerit ante.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent bibendum, diam ut gravida efficitur, risus neque scelerisque erat, ut rhoncus erat odio ac justo. Nunc scelerisque vestibulum augue, sit amet hendrerit ante.</p>
+        </div>
       </header>
 
       <!-- ********************  PROJECTS / PORTFOLIO  ********************* -->
       <section class="projects">
-        <h2>Featured Projects</h2>
-        <p>View selected projects below. More information can be found at <a href="http://christinatruong.com">christinatruong.com</a>.</p>
+        <div class="wrapper">
+          <h2>Featured Projects</h2>
 
-        <!-- Copy the whole <section> block to add more projects. -->
-        <section>
-          <h3>Music Artist Landing Page</h3>
-          <img src="placeholder images/Capture.JPG" alt="Screenshot of danielsgone.com Home page">
-          <p>Took on full creative control on this websites design and functionality.</p>
-          <a href="https://danielsgone.com" target="_blank">View project / case study</a>
-        </section>
-        <!-- End of Project block. -->
+          <!-- Copy the whole <section> block to add more projects. -->
+          <section>
+            <h3>Music Artist Landing Page</h3>
+            <img src="placeholder images/Capture.JPG" alt="Screenshot of danielsgone.com Home page">
+            <p>Took on full creative control on this websites design and functionality.</p>
+            <a href="https://danielsgone.com" target="_blank">View project / case study</a>
+          </section>
+          <!-- End of Project block. -->
+        </div>
       </section>
 
       <!-- ***********************  WORK EXPERIENCE  *********************** -->
       <section class="work">
-        <h2>Work Experience</h2>
+        <div class="wrapper">
+          <h2>Work Experience</h2>
 
-        <!-- Copy this whole <section> block to add more jobs. -->
-        <section>
-          <h3>Sales Associate</h3>
-          <p>Dollar Tree</p>
-          <p>2022 - Present</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quae duo sunt, unum facit. Quid dubitas igitur mutare principia naturae? In schola desinis. Frater et T.</p>
-        </section>
-        <!-- End of Job block. -->
-        <section>
-          <h3>Sales Associate</h3>
-          <p>Walmart</p>
-          <p>2021 - 2022</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quae duo sunt, unum facit. Quid dubitas igitur mutare principia naturae? In schola desinis. Frater et T.</p>
-        </section>
+          <!-- Copy this whole <section> block to add more jobs. -->
+          <section>
+            <h3>Sales Associate</h3>
+            <p>Dollar Tree</p>
+            <p>2022 - Present</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quae duo sunt, unum facit. Quid dubitas igitur mutare principia naturae? In schola desinis. Frater et T.</p>
+          </section>
+          <!-- End of Job block. -->
+          <section>
+            <h3>Sales Associate</h3>
+            <p>Walmart</p>
+            <p>2021 - 2022</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quae duo sunt, unum facit. Quid dubitas igitur mutare principia naturae? In schola desinis. Frater et T.</p>
+          </section>
 
-        <section>
-          <h3>Sales Associate</h3>
-          <p>Food Lion</p>
-          <p>2019 - 2020</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quae duo sunt, unum facit. Quid dubitas igitur mutare principia naturae? In schola desinis. Frater et T.</p>
-        </section>
+          <section>
+            <h3>Sales Associate</h3>
+            <p>Food Lion</p>
+            <p>2019 - 2020</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quae duo sunt, unum facit. Quid dubitas igitur mutare principia naturae? In schola desinis. Frater et T.</p>
+          </section>
+        </div>
       </section>
 
       <!-- ******************  EDUCATION & CERTIFICATIONS ****************** -->
       <section class="edu">
-        <h2>Education</h2>
+        <div class="wrapper">
+          <h2>Education</h2>
 
-        <!-- Copy this whole <section> block to add more schools. -->
-        <section>
-          <h3>Wake Technical Community College - Raleigh</h3>
-          <p>Web Development 2020 - 2023</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quae duo sunt, unum facit. Quid dubitas igitur mutare principia naturae? In schola desinis. Frater et T.</p>
-        </section>
-        <!-- End of School block. -->
+          <!-- Copy this whole <section> block to add more schools. -->
+          <section>
+            <h3>Wake Technical Community College - Raleigh</h3>
+            <p>Web Development 2020 - 2023</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quae duo sunt, unum facit. Quid dubitas igitur mutare principia naturae? In schola desinis. Frater et T.</p>
+          </section>
+          <!-- End of School block. -->
+        </div>
       </section>
 
       <!-- *****************  CONTACT INFO / SOCIAL MEDIA  ***************** -->
       <footer>
-        <h2>Let's Keep in Touch!</h2>
+        <div class="wrapper">
+          <h2>Let's Keep in Touch!</h2>
 
-        <!-- Social media and contact links. Add or remove any networks. -->
-        <ul>
-          <li><a href="mailto:daocampo@my.waketech.edu">daocampo@my.waketech.edu</a></li>
-          <li><a href="http://yourwebsite.com" target="_blank">daocampo.com</a></li>
-          <li><a href="#" target="_blank">Twitter</a></li>
-          <li><a href="#" target="_blank">LinkedIn</a></li>
-          <li><a href="#" target="_blank">Facebook</a></li>
-        </ul>
+          <!-- Social media and contact links. Add or remove any networks. -->
+          <ul>
+            <li><a href="mailto:daocampo@my.waketech.edu">daocampo@my.waketech.edu</a></li>
+            <li><a href="http://yourwebsite.com" target="_blank">daocampo.com</a></li>
+            <li><a href="#" target="_blank">Twitter</a></li>
+            <li><a href="#" target="_blank">LinkedIn</a></li>
+            <li><a href="#" target="_blank">Facebook</a></li>
+          </ul>
+        </div>
       </footer>
     </main>
   </body>
