--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Lesson 02 Page</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Macondo&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
@@ -27,11 +27,11 @@
           <h2>Featured Projects</h2>
 
           <!-- Copy the whole <section> block to add more projects. -->
-          <section>
+          <section class="projectitem">
             <h3>Music Artist Landing Page</h3>
             <img src="placeholder images/Capture.JPG" alt="Screenshot of danielsgone.com Home page">
             <p>Took on full creative control on this websites design and functionality.</p>
-            <a href="https://danielsgone.com" target="_blank">View project / case study</a>
+            <a href="https://danielsgone.com" target="_blank">View project</a>
           </section>
           <!-- End of Project block. -->
         </div>
