--- a/index.html
+++ b/index.html
@@ -17,6 +17,34 @@
           <h1>Daniel Ocampo</h1>
           <h2>Web Developer</h2>
 
+          <nav>
+            <ul id="nav">
+              <li><a href="#">Personal</a>
+                <ul>
+                  <li><a href="#">Home</a></li>
+                  <li><a href="#">About</a></li>
+                  <li><a href="#">Contact</a></li>
+                </ul>
+              </li>
+
+              <li><a href=#>Portfolio</a>
+                <ul>
+                  <li><a href="#">HTML/CSS</a></li>
+                  <li><a href="#">JavaScript</a></li>
+                  <li><a href="#">C++</a></li>
+                </ul>
+              </li>
+
+              <li><a href=#>Work Experience</a>
+                <ul>
+                  <li><a href="#">Relevant</a></li>
+                  <li><a href="#">Unrelated</a></li>
+                </ul>
+              </li>
+
+            </ul>
+          </nav><br>
+
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent bibendum, diam ut gravida efficitur, risus neque scelerisque erat, ut rhoncus erat odio ac justo. Nunc scelerisque vestibulum augue, sit amet hendrerit ante.</p>
         </div>
       </header>
