--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lesson 02 Page</title>
+    <title>Portfolio Page</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Macondo&family=Roboto&display=swap" rel="stylesheet">
@@ -51,13 +51,13 @@
 
       <!-- ********************  PROJECTS / PORTFOLIO  ********************* -->
       <section class="projects">
-        <div class="wrapper">
+        <div class="wrapper divider">
           <h2>Featured Projects</h2>
 
           <!-- Copy the whole <section> block to add more projects. -->
           <section class="projectitem">
             <h3>Music Artist Landing Page</h3>
-            <img src="placeholder images/Capture.JPG" alt="Screenshot of danielsgone.com Home page">
+            <img src="images/Capture.JPG" alt="Screenshot of danielsgone.com Home page">
             <p>Took on full creative control on this websites design and functionality.</p>
             <a href="https://danielsgone.com" target="_blank">View project</a>
           </section>
@@ -67,36 +67,47 @@
 
       <!-- ***********************  WORK EXPERIENCE  *********************** -->
       <section class="work">
-        <div class="wrapper">
+        <div class="wrapper item-details divider">
           <h2>Work Experience</h2>
 
-          <!-- Copy this whole <section> block to add more jobs. -->
-          <section>
-            <h3>Sales Associate</h3>
-            <p>Dollar Tree</p>
-            <p>2022 - Present</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quae duo sunt, unum facit. Quid dubitas igitur mutare principia naturae? In schola desinis. Frater et T.</p>
-          </section>
-          <!-- End of Job block. -->
-          <section>
-            <h3>Sales Associate</h3>
-            <p>Walmart</p>
-            <p>2021 - 2022</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quae duo sunt, unum facit. Quid dubitas igitur mutare principia naturae? In schola desinis. Frater et T.</p>
+          <section class="job-item">
+            <div class="job-details">
+              <h3>Sales Associate</h3>
+              <p>Dollar Tree</p>
+              <p>2022 - Present</p>
+            </div>
+            <div class="job-summary">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quae duo sunt, unum facit. Quid dubitas igitur mutare principia naturae? In schola desinis. Frater et T.</p>
+            </div>
           </section>
 
-          <section>
-            <h3>Sales Associate</h3>
-            <p>Food Lion</p>
-            <p>2019 - 2020</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quae duo sunt, unum facit. Quid dubitas igitur mutare principia naturae? In schola desinis. Frater et T.</p>
+          <section class="job-item">
+            <div class="job-details">
+              <h3>Sales Associate</h3>
+              <p>Walmart</p>
+              <p>2021 - 2022</p>
+              </div>
+            <div class="job-summary">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quae duo sunt, unum facit. Quid dubitas igitur mutare principia naturae? In schola desinis. Frater et T.</p>
+            </div>
+          </section>
+
+          <section class="job-item">
+            <div class="job-details">
+              <h3>Sales Associate</h3>
+              <p>Food Lion</p>
+              <p>2019 - 2020</p>
+            </div>
+            <div class="job-summary">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quae duo sunt, unum facit. Quid dubitas igitur mutare principia naturae? In schola desinis. Frater et T.</p>
+            </div>
           </section>
         </div>
       </section>
 
       <!-- ******************  EDUCATION & CERTIFICATIONS ****************** -->
       <section class="edu">
-        <div class="wrapper">
+        <div class="wrapper item-details">
           <h2>Education</h2>
 
           <!-- Copy this whole <section> block to add more schools. -->
@@ -115,7 +126,7 @@
           <h2>Let's Keep in Touch!</h2>
 
           <!-- Social media and contact links. Add or remove any networks. -->
-          <ul>
+          <ul class="contact-list">
             <li><a href="mailto:daocampo@my.waketech.edu">daocampo@my.waketech.edu</a></li>
             <li><a href="http://yourwebsite.com" target="_blank">daocampo.com</a></li>
             <li><a href="#" target="_blank">Twitter</a></li>
